# UltimateTicTacToeDataGen

./: CMakeLists.txt  a.out  board.cpp  evaluatePositionsFromFile.cpp  evaluator.cpp  generateStartPositions.cpp  playAgainstRaw.cpp
